[gd_scene load_steps=20 format=3 uid="uid://ds41tvyxujn2h"]

[ext_resource type="Script" path="res://Characters/Player.gd" id="1_uheab"]
[ext_resource type="Texture2D" uid="uid://cqcbn0ytw0ot7" path="res://Characters/Poochys/Poochy-Stander.png" id="2_lj62y"]
[ext_resource type="Texture2D" uid="uid://11pswvtjxkmy" path="res://Characters/Poochys/Poochy-Walker-Sheet.png" id="3_f8meu"]
[ext_resource type="Script" path="res://Characters/player_networking.gd" id="4_4qpvw"]
[ext_resource type="Texture2D" uid="uid://e3phaxjct6lj" path="res://Characters/Poochys/Shooter-hand.png" id="5_c0gyg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_friok"]
atlas = ExtResource("2_lj62y")
region = Rect2(0, 0, 17, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4mca"]
atlas = ExtResource("3_f8meu")
region = Rect2(0, 0, 17, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7og7"]
atlas = ExtResource("3_f8meu")
region = Rect2(17, 0, 17, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_72qcv"]
atlas = ExtResource("3_f8meu")
region = Rect2(34, 0, 17, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i56f"]
atlas = ExtResource("3_f8meu")
region = Rect2(51, 0, 17, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_04gug"]
atlas = ExtResource("3_f8meu")
region = Rect2(68, 0, 17, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjfxd"]
atlas = ExtResource("2_lj62y")
region = Rect2(0, 0, 17, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_xxdb6"]
animations = [{
"frames": [],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_friok")
}],
"loop": true,
"name": &"Roll",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4mca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7og7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72qcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i56f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04gug")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjfxd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vwlh7"]
radius = 18.2667
height = 74.6667

[sub_resource type="Gradient" id="Gradient_cnhf3"]
colors = PackedColorArray(0, 0.164706, 0.290196, 1, 0, 0.258824, 0.454902, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_j0ib3"]
gradient = SubResource("Gradient_cnhf3")

[sub_resource type="Gradient" id="Gradient_xksun"]
colors = PackedColorArray(0, 0.278431, 0.486275, 1, 0, 0.576471, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fwxpo"]
gradient = SubResource("Gradient_xksun")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_b7l2c"]
properties/0/path = NodePath(":sync_position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(":sync_velocity")
properties/1/spawn = false
properties/1/sync = true
properties/2/path = NodePath(".:sync_hand_position")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath(".:sync_move_state")
properties/3/spawn = false
properties/3/sync = true
properties/4/path = NodePath(".:sync_flip_sprite")
properties/4/spawn = false
properties/4/sync = true
properties/5/path = NodePath(".:sync_hand_flip")
properties/5/spawn = false
properties/5/sync = true
properties/6/path = NodePath(".:sync_hand_rotation")
properties/6/spawn = true
properties/6/sync = true
properties/7/path = NodePath(".:sync_health")
properties/7/spawn = true
properties/7/sync = true
properties/8/path = NodePath(".:sync_max_health")
properties/8/spawn = true
properties/8/sync = true
properties/9/path = NodePath(".:sync_player_name")
properties/9/spawn = true
properties/9/sync = true
properties/10/path = NodePath(".:sync_collidable")
properties/10/spawn = true
properties/10/sync = true
properties/11/path = NodePath(".:sync_dead")
properties/11/spawn = true
properties/11/sync = true
properties/12/path = NodePath("..:scale")
properties/12/spawn = true
properties/12/sync = true
properties/13/path = NodePath(".:sync_bullets_per_shot")
properties/13/spawn = true
properties/13/sync = true
properties/14/path = NodePath(".:sync_bullet_scale")
properties/14/spawn = true
properties/14/sync = true

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_uheab")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_xxdb6")
animation = &"Roll"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 13)
scale = Vector2(1.5, -1.24493)
shape = SubResource("CapsuleShape2D_vwlh7")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -56.0
offset_top = -29.0
offset_right = -16.0
offset_bottom = 11.0

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI"]
layout_mode = 0
offset_right = 15.0
offset_bottom = 66.0
value = 100.0
fill_mode = 3
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_j0ib3")
texture_progress = SubResource("GradientTexture1D_fwxpo")

[node name="PlayerNameLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -57.0
offset_right = 124.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Poochy"
horizontal_alignment = 1

[node name="Networking" type="Node" parent="."]
script = ExtResource("4_4qpvw")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="Networking"]
replication_config = SubResource("SceneReplicationConfig_b7l2c")

[node name="Hand" type="Node2D" parent="."]

[node name="Sprite2d" type="Sprite2D" parent="Hand"]
texture_filter = 1
texture = ExtResource("5_c0gyg")

[node name="ShootPoint" type="Node2D" parent="Hand"]
position = Vector2(16, -3)

[node name="Powers" type="Node" parent="."]
